Style to prevent Layout shift when placeholder is clicked

--- a/packages/block-editor/src/components/default-block-appender/content.scss
+++ b/packages/block-editor/src/components/default-block-appender/content.scss
@@ -158,6 +158,15 @@
 	}
 }
 
+// Prevent appender layout shift when default placeholder is clicked and replaced with insertDefaultBlock( undefined, rootClientId );
+.is-root-container.wp-block-post-content-is-layout-flow .block-list-appender {
+
+	p.block-editor-default-block-appender__content {
+		margin-block-start: 0;
+		margin-block-end: 0;
+	}
+}
+
 .block-editor-default-block-appender__content {
 	cursor: text;
 }
